--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Likes</title>
+    <title>Post</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="/webjars/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="/webjars/bootstrap/4.5.0/css/bootstrap.min.css" />
@@ -14,20 +14,24 @@
         <thead class="thead-inverse">
         <tr>
             <th>Username</th>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Email</th>
+            <th>Message</th>
+            <th>Timestamp</th>
 
         </tr>
         </thead>
-        <tr th:each="user: ${users}">
-            <td th:text="${user.username}"></td>
-            <td th:text="${user.firstName}"></td>
-            <td th:text="${user.lastName}"></td>
-            <td th:text="${user.mail}"></td>
 
+
+        <tr>
+            <td th:text="${post.username}"></td>
+            <td th:text="${post.message}"></td>
+            <td th:text="${post.timeStamp}"></td>
         </tr>
     </table>
+
+    <form th:action="@{'/posts/' + ${post.id} + '/update'}" method="post" enctype="multipart/form-data">
+        <textarea class="form-control" type="text" id="message" name="message" placeholder="New message"></textarea>
+        <button type="submit" id="filtrare" class="btn btn-primary">Edit Post</button>
+    </form>
 </div>
 
 <div class="container">
